# mlzoomcamp

./: README.md  session-1.ipynb
05-deployment/: customer.py  dockerfile  pyproject.toml  serve.py
06-decision-tree/: decisiion-tree.ipynb
deeplearning/: hairstyleclassifier.ipynb
evaluation/: eval.ipynb
linear-regression/: linear-regression.ipynb
logistic-regression/: logistic.ipynb
