[project]
name = "mlzoomcamp-flask-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "scikit-learn>=1.7.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.4",
]

[tool.setuptools]
py-modules = []